components/Carousel/Carousel.module.scss
@use "/styles/lib/mixins.scss";

.carousel {
  width: 100%;
}

.carousel_viewport {
  --mask-size: clamp(16px, 10vw, 64px);
  --margin-inline: -12px;
  --m-offset-b: min(
    var(--remaining-backwards) + var(--margin-inline),
    var(--margin-inline) * -1
  );
  --m-offset-f: min(
    var(--remaining-forwards) + var(--margin-inline),
    var(--margin-inline) * -1
  );
  margin-inline: var(--margin-inline);
  mask-image: linear-gradient(
    to right,
    transparent var(--m-offset-b),
    #000
      calc(
        min(var(--remaining-backwards), var(--mask-size)) + var(--m-offset-b)
      ),
    #000
      calc(
        100% - min(var(--remaining-forwards), var(--mask-size)) -
          var(--m-offset-f)
      ),
    transparent calc(100% - var(--m-offset-f))
  );
  mask-size: 100% 100%;

  overflow: scroll;
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  position: relative;
  scroll-snap-type: x mandatory;
  scrollbar-color: transparent transparent;
  scrollbar-width: none; /* Firefox, Safari 18.2+, Chromium 121+ */

  &::-webkit-scrollbar {
    display: none; /* Older Safari and Chromium */
  }
}

.carousel_content {
  display: flex;
  flex-direction: row;
  gap: 16px;
  padding: 16px calc(var(--margin-inline) * -1);
  width: fit-content;
}

.carousel_item {
  scroll-margin-inline: calc(var(--margin-inline) * -1);
  scroll-snap-align: center;
}

.card {
  user-select: none;
  white-space: nowrap;

  source {
    display: none;
  }

  img {
    --radius: clamp(6px, calc(1vw * var(--size, 1)), 10px);
    --padding: clamp(4px, calc(1vw * var(--size, 1)), 7px);
    --base-size: 20vw;
    --final-size: calc(var(--base-size) * (var(--size, 1) + 0.5));
    align-items: center;
    background-color: var(--color-toolbar-background);
    border-radius: var(--radius);
    box-shadow: 0 1px 12px var(--color-shadow-1),
      inset 0 0 2px 0.75px var(--color-border-2),
      inset 0 0 0 0.75px var(--color-border-1);
    display: flex;
    flex-direction: row;
    gap: 8px;
    justify-content: flex-start;
    max-width: var(--final-size);
    min-width: var(--final-size);
    padding: var(--padding);
    transition: mixins.theme-transition(color, background-color, box-shadow);
    width: var(--final-size);

    @include mixins.up-to-medium {
      --base-size: 35vw;
    }
  }

  @include mixins.remove-transition;
}

.button {
  align-items: center;
  background-color: var(--color-toolbar-background);
  border: 0;
  border-radius: 24px;
  box-shadow: 0 1px 12px var(--color-shadow-1),
    inset 0 0 2px 0.75px var(--color-border-2),
    inset 0 0 0 0.75px var(--color-border-1);
  color: var(--text-primary);
  display: inline-flex;
  flex-shrink: 0;
  font-size: inherit;
  padding: 0.5em 1em;
  transition: mixins.theme-transition(color, background-color, box-shadow);

  &:not(:disabled) {
    &:hover,
    &:focus-visible,
    &[data-state="open"] {
      background-color: var(--color-toolbar-button-background-hover);
      box-shadow: 0 0 24px var(--color-shadow-2),
        inset 0 0 2px 0 var(--color-border-2),
        inset 0 0 0 0.5px var(--color-border-1);
      color: var(--color-toolbar-button-color-hover);
      outline: 0;
    }

    &:active {
      background-color: var(--color-toolbar-button-background-active);
      color: var(--color-toolbar-button-color-active) !important;
    }
  }

  &:disabled {
    opacity: 0.5;
  }
}

.legend_and_controls {
  align-items: center;
  display: flex;
  gap: 4px;
  justify-content: space-between;

  .title_and_slider {
    align-items: center;
    display: flex;
    gap: 16px;
  }

  .slider {
    align-items: center;
    display: flex;
    gap: 8px;
  }

  .controls {
    display: flex;
    gap: 4px;
  }

  @include mixins.up-to-medium {
    //align-items: flex-start;
    //flex-direction: column;
    gap: 8px;

    .controls {
      //order: -1;
    }

    .title_and_slider {
      align-items: flex-start;
      align-self: flex-start;
      flex-direction: column;
      gap: 8px;
    }

    .slider {
      display: none;
    }
  }
}

